# cope

./: .travis.yml  README.md  cope.cabal  stack.yaml
lib/: Imports.hs
lib/Cope/: Command.hs  Gui.hs  Main.hs  Query.hs  Time.hs  Types.hs
src/: Main.hs
